# repo

./: CMakeLists.txt  code.style.schemes.xml  find.xml  github_settings.xml  ide.general.xml  jdk.table.xml  mystl.cpp  other.xml  project.default.xml  ui.lnf.xml  vcs.xml
_windows/: keymap.xml
codestyles/: Default _1_.xml  Default copy.xml  MyScheme.xml  Shared Settings.xml
colors/: Darcula copy.icls  Default copy.icls  Default copy2.icls  _@user_Darcula.icls  _@user_Default.icls
includes/: CMakeLists.txt  MyStack.h  MyStackImpl.h  MyString.cpp  MyString.h  mystl.h
keymaps/: Default copy.xml  Default copy33.xml  Default mycopy.xml
